--- a/Circle-2.csproj
+++ b/Circle-2.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="2.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NHotkey" Version="3.0.0" />
     <PackageReference Include="NHotkey.Wpf" Version="3.0.0" />
   </ItemGroup>
